--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,7 @@
-certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_477u68wvzm/croot/certifi_1671487773341/work/certifi
-click==8.1.3
-contourpy==1.0.6
-cycler==0.11.0
-Flask==2.2.2
-fonttools==4.38.0
-imageio==2.24.0
-imbalanced-learn==0.10.1
-imblearn==0.0
-importlib-metadata==6.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-kiwisolver==1.4.4
-lime==0.2.0.1
-MarkupSafe==2.1.1
-matplotlib==3.6.3
-networkx==3.0
-numpy==1.23.5
-packaging==23.0
 pandas==1.5.2
-Pillow==9.4.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.7
-PyWavelets==1.4.1
-scikit-image==0.19.3
-scikit-learn==1.2.0
-scipy==1.10.0
-six==1.16.0
+numpy==1.23.5
 sklearn==0.0.post1
-threadpoolctl==3.1.0
-tifffile==2022.10.10
-tqdm==4.64.1
-Werkzeug==2.2.2
-zipp==3.11.0
+lime==0.2.0.1
+joblib==1.2.0
+flask==2.2.2
+imbalanced-learn==0.10.1
